fix scrollbar

--- a/public/Css/styles.css
+++ b/public/Css/styles.css
@@ -418,7 +418,8 @@ h6 {
     box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.2);
     z-index: 10;
-    overflow-y: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
     transform: translateX(-100%);
     transition: transform 0.7s ease-in;
 }
